--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -8,27 +8,44 @@ output:
 ---
 
 
-## Loading and preprocessing the data
+#### Loading and Processing the Data
 
-setwd("~/GitHub/RepData_PeerAssessment1")
-data <- read.table(unz("activity.zip", "activity.csv"), header=T, quote="\"", sep=",")
+- set my working directory
+- read in the zipped file, unzip it, and save it as "data"
+- format date
 
-# convert date to date data type
-data$date <- as.Date(data$date) 
+```{r getdata}
+setwd("~/GitHub/RepData_PeerAssessment1")  
+activity <- read.table(unz("activity.zip", "activity.csv"), header=T, quote="\"", sep=",")   
+activity$date <- as.Date(activity$date)
+```
+  
+#### What is mean total number of steps taken per day?
+
+- Built dataset without missings
+- Found daily steps
+- Got mean
+
+```{r}
+activity.ignore.na <- na.omit(activity)
+daily.steps <- rowsum(activity.ignore.na$steps, format(activity.ignore.na$date, '%Y-%m-%d')) 
+daily.steps <- data.frame(daily.steps) 
+names(daily.steps) <- ("steps") 
+mean(daily.steps$steps)
+
+hist(daily.steps$steps, 
+     main=" ",
+     breaks=10,
+     xlab="Total Number of Steps Taken Daily")
+```
+
+
+### What is the average daily activity pattern?
 
 
 
-
-## What is mean total number of steps taken per day?
-
-
-
-## What is the average daily activity pattern?
+### Imputing missing values
 
 
 
-## Imputing missing values
-
-
-
-## Are there differences in activity patterns between weekdays and weekends?
+### Are there differences in activity patterns between weekdays and weekends?
